--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-center logo-wrap">
-						<div id="fh5co-logo"><a href="index.html">Tasty<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="index.html">Modular Kitchen<span>.</span></a></div>
 					</div>
 					<div class="col-xs-12 text-center menu-1 menu-wrap">
 						<ul>
@@ -76,12 +76,12 @@
 							<li class="has-dropdown">
 								<a href="gallery.html">Gallery</a>
 								<ul class="dropdown">
-									<li><a href="#">Events</a></li>
-									<li><a href="#">Food</a></li>
-									<li><a href="#">Coffees</a></li>
+									<li><a href="#">Modular Kitchens</a></li>
+									<li><a href="#">Interiors</a></li>
+									<li><a href="#">Furnitures</a></li>
 								</ul>
 							</li>
-							<li><a href="reservation.html">Reservation</a></li>
+							<!--<li><a href="reservation.html">Reservation</a></li>-->
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
@@ -99,8 +99,8 @@
 				<div class="col-md-12 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<h1>The Best Coffee <em>&amp;</em> Restaurant <em>in</em> Brooklyn</h1>
-							<h2>Brought to you by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+							<h1> Amazing <!--<em>&amp;</em>--> - Modular Kitchen Designs  <!--<em>in</em>--> </h1>
+							<!--<h2>Brought to you by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>-->
 						</div>
 					</div>
 				</div>
