--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<small class="block">&copy; 2017 Anonymity Freelancing. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="#" target="_blank"></a> <!--<a href="#" target="_blank">Unsplash</a>--></small>
+						<small class="block">Designed by <a href="#" target="_blank"></a>  <a href="#" target="_blank"> Anonymity Freelancing</a></small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
