--- a/menu.html
+++ b/menu.html
@@ -236,7 +236,7 @@
 				<div class="col-md-4 col-md-push-1 fh5co-widget">
 					<h4>Contact Information</h4>
 					<ul class="fh5co-footer-links">
-						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
+						<li>198 /11, 21st Street, <br> Chennai </li>
 						<li><a href="tel://">+ 1234 56789</a></li>
 						<li><a href="mailto:">info@yoursite.com</a></li>
 						<li><a href="#"></a></li>
