--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<div class="col-xs-12 text-center menu-1 menu-wrap">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="menu.html">Menu</a></li>
+							<li><a href="menu.html">Our works</a></li>
 							<li class="has-dropdown">
 								<a href="gallery.html">Gallery</a>
 								<ul class="dropdown">
@@ -116,7 +116,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 fh5co-heading animate-box">
-					<h2>Today's Menu</h2>
+					<h2>Sample works</h2>
 					<div class="row">
 						<div class="col-md-6">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ab debitis sit itaque totam, a maiores nihil, nulla magnam porro minima officiis! Doloribus aliquam voluptates corporis et tempora consequuntur ipsam, itaque, nesciunt similique commodi omnis. Ad magni perspiciatis, voluptatum repellat.</p>
