--- a/gallery.html
+++ b/gallery.html
@@ -60,9 +60,9 @@
 							<li class="has-dropdown">
 								<a href="gallery.html">Gallery</a>
 								<ul class="dropdown">
-									<li><a href="#">Modular Kitchens</a></li>
-									<li><a href="#">Interiors</a></li>
-									<li><a href="#">Furnitures</a></li>
+									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Modular Kitchens</a></li>
+									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Interiors</a></li>
+									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Furnitures</a></li>
 								</ul>
 							</li>
 							<!--<li><a href="reservation.html">Reservation</a></li>-->
