--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 							<li class="has-dropdown">
 								<a href="gallery.html">Gallery</a>
 								<ul class="dropdown">
-									<li><a href="#">Modular Kitchens</a></li>
-									<li><a href="#">Interiors</a></li>
-									<li><a href="#">Furnitures</a></li>
+									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Modular Kitchens</a></li>
+									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Interiors</a></li>
+									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Furnitures</a></li>
 								</ul>
 							</li>
 							<!--<li><a href="reservation.html">Reservation</a></li>-->
@@ -206,7 +206,7 @@
 						   			<div class="col-md-12 col-md-offset-0 col-md-pull-10 slider-text slider-text-bg">
 						   				<div class="slider-text-inner">
 						   					<div class="desc">
-													<h2>Crab <em>with</em> Curry Sources</h2>
+													<h2>Modular 3</h2>
 													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt eveniet quae, numquam magnam doloribus eligendi ratione rem, consequatur quos natus voluptates est totam magni! Nobis a temporibus, ipsum repudiandae dolorum.</p>
 													<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
 						   					</div>
