--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,9 @@
 							<li class="has-dropdown">
 								<a href="gallery.html">Gallery</a>
 								<ul class="dropdown">
-									<li><a href="#">Modular Kitchens</a></li>
-									<li><a href="#">Interiors</a></li>
-									<li><a href="#">Furnitures</a></li>
+									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Modular Kitchens</a></li>
+									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Interiors</a></li>
+									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Furnitures</a></li>
 								</ul>
 							</li>
 							<!--<li><a href="reservation.html">Reservation</a></li>-->
@@ -86,7 +86,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<h1>Get <em>in</em> Touch</h1>
-							<h2>Brought to you by <a href="#" target="_blank">Anonymity</a></h2>
+							<h2>Brought to you by <a href="#" target="_blank">Anonymity Freelancing</a></h2>
 						</div>
 					</div>
 				</div>
