--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="menu.html">Our works</a></li>
-							<li class="has-dropdown">
-								<a href="gallery.html">Gallery</a>
-								<ul class="dropdown">
+							<!--<li class="has-dropdown">-->
+							<li><a href="gallery.html">Gallery</a></li>
+								<!--<ul class="dropdown">
 									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Modular Kitchens</a></li>
 									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Interiors</a></li>
 									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Furnitures</a></li>
-								</ul>
-							</li>
+								</ul>-->
+							<!--</li>-->
 							<!--<li><a href="reservation.html">Reservation</a></li>-->
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
