Add Contact Form

--- a/index.html
+++ b/index.html
@@ -317,10 +317,24 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Contact us</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae enim quae vitae cupiditate, sequi quam ea id dolor reiciendis consectetur repudiandae. Rem quam, repellendus veniam ipsa fuga maxime odio? Eaque!</p>
-					<p><a href="reservation.html" class="btn btn-primary btn-outline">Register Now</a></p>
+				<div class="col-lg-6">
+					<form method="POST" action="https://formspree.io/modularkitchen122@gmail.com">
+						<div class="form-group">
+							<input class="form-control" type="text" name="name" placeholder="Name">
+						</div>
+						<div class="form-group">
+							<input class="form-control" type="email" name="_replyto" placeholder="Email">
+						</div>
+						<div class="form-group">
+							<textarea name="message" class="form-control" rows="6" placeholder="Message"></textarea>
+						</div>
+						<div class="col-lg-12">
+							<button type="submit" class="btn btn-lg btn-primary" style="display: block; margin: 0 auto;">Send Message</button>
+						</div>
+					</form>	
+				</div>
+				<div class="col-lg-6">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49354.466497424386!2d80.22200938010107!3d13.072505871979455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5265ea4f7d3361%3A0x6e61a70b6863d433!2sChennai%2C+Tamil+Nadu!5e0!3m2!1sen!2sin!4v1495532670470" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
